--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Tera web</title>                  <!--Change for your own title-->
+    <title>Thug Byron</title>                  <!--Change for your own title-->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/typography.css">
     <link rel="stylesheet" href="css/lightbox.css">
@@ -16,7 +16,7 @@
     <header>
       <nav class="content">
         <h1>
-          <a href="index.html">Tera Art Gallery</a> <!--Change for your own title for the banner-->
+          <a href="index.html">Byron Art Gallery</a> <!--Change for your own title for the banner-->
         </h1>
         <ul>
           <li>
@@ -27,30 +27,30 @@
     </header>
 
     <article id="page" class="content">
-      <h2>My Gallery</h2>                <!--Change for your own title-->
+      <h2>My artwork</h2>                <!--Change for your own title-->
       <p>
-      Write your texting here              <!--Write your texting-->
+      This some of my best work i've done in this class. I hope you like them.              <!--Write your texting-->
       </p>
       
       <ul class="gallery">
         <li>
-          <a data-lightbox="image-1" href="img/brunobig.jpg"> <!--Add your own big jpg-->
-            <img src="img/brunosmall.jpg">                 <!--Add your own small jpg-->
+          <a data-lightbox="image-1" href="img/BYRON-BEAR-HEAD.jpg"> <!--Add your own big jpg-->
+            <img src="img/BYRON-BEAR-HEAD.jpg">                 <!--Add your own small jpg-->
           </a>
         </li>
         <li>
-          <a data-lightbox="image-1" href="img/photos/photo-2-800x800.jpg"> <!--Add your own big jpg-->
-            <img src="img/photos/photo-2-200x200.jpg"> <!--Add your own small jpg-->
+          <a data-lightbox="image-1" href="img/Byron-berlin.jpg"> <!--Add your own big jpg-->
+            <img src="img/Byron-berlin.jpg"> <!--Add your own small jpg-->
           </a>
         </li>
         <li>
-          <a data-lightbox="image-1" href="img/photos/photo-3-800x800.jpg"> <!--Add your own big jpg-->
-            <img src="img/photos/photo-3-200x200.jpg"> <!--Add your own small jpg-->
+          <a data-lightbox="image-1" href="img/Strong-man.jpg"> <!--Add your own big jpg-->
+            <img src="img/Strong-man.jpg"> <!--Add your own small jpg-->
           </a>
         </li>
         <li>
-          <a data-lightbox="image-1" href="img/photos/photo-4-800x800.jpg"> <!--Add your own big jpg-->
-            <img src="img/photos/photo-4-200x200.jpg"> <!--Add your own small jpg-->
+          <a data-lightbox="image-1" href="img/Byron-monolisa.jpg"> <!--Add your own big jpg-->
+            <img src="img/Byron-monolisa.jpg"> <!--Add your own small jpg-->
           </a>
         </li>
         
@@ -60,7 +60,7 @@
      <p> </p>
     <footer>
       <div class="content">
-        <p>Reflections of your work</p>      <!--Reflections about your artwork-->
+        <p>I feel proud of all of my work and all the things i learned in this class. My favorite work is the kid with the bear head because it was a big challege for me to put the head in the body and make it look like they're connected. However, i was able to persevere and accomplish this assingment. On the second picture I tried to leave a meesage that states that noone should be dehumanized and everyone is created equal. Overall, it was just to say STOP RASISM. The two other pictures are just making fun of this art that was creted by someone i dont know.</p>      <!--Reflections about your artwork-->
       </div>
     </footer>
   </body>
